--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 ﻿BossShopPro
 by Felix Neubauer
 
+v2.0.3
+* [ADD] Added "%uuid%" placeholder
+* [FIX] Fixed durability ItemData
+
+
 v2.0.2
 * [ADD] "color" ItemData can now modify the color of potions
 * [FIX] Actions which are triggered by player input are no longer executed asynchronously
