--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 ﻿BossShopPro
 by Felix Neubauer
 
+v2.0.5
+*[UPDATE] Updated EpicSpawners support
+*[FIX] Fixed signs not working
+
+
 v2.0.4 [BETA]
 *[NOTE] Still supports Spigot 1.13.*. If you use an older Spigot version than 1.13.*  use BossShopPro v1.9.8 or older.
 *[UPDATE] Updated to Spigot 1.14
