Updated Changelog for 2.0.6

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,10 @@
 ﻿BossShopPro
 by Felix Neubauer
 
+v2.0.6 [BETA]
+*[ADD] Added weather condition
+*[IMPROVE] Improved playerhead ItemData
+
 v2.0.5
 *[UPDATE] Updated EpicSpawners support
 *[FIX] Fixed signs not working
