--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 ﻿BossShopPro
 by Felix Neubauer
 
+v2.0.7
+*[UPDATE] Updated EpicSpawners support
+*[UPDATE] Updated PlaceholderAPI support
+*[ADD] Added custommodeldata as an alias for durability
+
 v2.0.6 [BETA]
 *[ADD] Added weather condition
 *[IMPROVE] Improved playerhead ItemData
