--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -4,7 +4,7 @@ by Felix Neubauer
 v2.0.7
 *[UPDATE] Updated EpicSpawners support
 *[UPDATE] Updated PlaceholderAPI support
-*[ADD] Added custommodeldata as an alias for durability
+*[ADD] Added new item part: custommodeldata! You can now change the texture of an item by using this feature.
 
 v2.0.6 [BETA]
 *[ADD] Added weather condition
