--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,14 +1,22 @@
 ﻿BossShopPro
 by Felix Neubauer
 
+v2.0.8
+* [FIX] Fixed selling items no longer working
+
+
 v2.0.7
+*[ADD] Added CustomModelData support
 *[UPDATE] Updated EpicSpawners support
 *[UPDATE] Updated PlaceholderAPI support
-*[ADD] Added new item part: custommodeldata! You can now change the texture of an item by using this feature.
+Update by ItsMeGlare
+
 
 v2.0.6 [BETA]
 *[ADD] Added weather condition
 *[IMPROVE] Improved playerhead ItemData
+Update by ItsMeGlare
+
 
 v2.0.5
 *[UPDATE] Updated EpicSpawners support
